# firmware

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.rst
app/: CMakeLists.txt  prj.conf  west.yml
app/boards/: nrf52840dk_nrf52840.overlay
app/boards/seeed/xiao_custom_pcb/: Kconfig  Kconfig.defconfig  Kconfig.xiao_custom_pcb  board.yml  xiao_custom_pcb-pinctrl.dtsi  xiao_custom_pcb.dts  xiao_custom_pcb.yaml  xiao_custom_pcb_common.dtsi
app/src/: brew_thread.c  brew_thread.h  main.c
app/src/lvgl/: lv_ui.c  lv_ui.h
app/src/lvgl/screens/: extraction_screen.c  extraction_screen.h  main_screen.c  main_screen.h  settings_screen.c  settings_screen.h
app/src/lvgl/widgets/: button_widget.c  button_widget.h
